--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,8 @@ dependencies:
   font_awesome_flutter: ^10.7.0
   image_picker: ^1.0.7
   path_provider: ^2.0.9
+  agora_rtc_engine: ^6.3.0
+  agora_uikit: ^1.3.8
 
 dev_dependencies:
   flutter_test:
