--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,9 @@ dependencies:
   path_provider: ^2.0.9
   agora_rtc_engine: ^6.3.0
   agora_uikit: ^1.3.8
+  uuid: ^4.2.2
+  share_plus: ^7.2.2
+  http: ^1.1.0
 
 dev_dependencies:
   flutter_test:
