--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   uuid: ^4.2.2
   share_plus: ^7.2.2
   http: ^1.1.0
+  permission_handler: ^11.0.1
 
 dev_dependencies:
   flutter_test:
