--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   share_plus: ^7.2.2
   http: ^1.1.0
   permission_handler: ^11.0.1
+  table_calendar: ^3.1.0
 
 dev_dependencies:
   flutter_test:
