--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,8 @@ dependencies:
   http: ^1.1.0
   permission_handler: ^11.0.1
   table_calendar: ^3.1.0
+  internet_connection_checker: ^0.0.1+2
+  shared_preferences: ^2.2.2
 
 dev_dependencies:
   flutter_test:
