--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,7 @@ dependencies:
   internet_connection_checker: ^0.0.1+2
   shared_preferences: ^2.2.2
   flare_flutter: ^3.0.2
+  fluttertoast: ^8.0.9
 
 dev_dependencies:
   flutter_test:
