--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,7 @@ dependencies:
   fluttertoast: ^8.0.9
   intl: ^0.19.0
   dropdown_button2: ^2.3.9
+  flutter_slidable: ^1.2.0
 
 dev_dependencies:
   flutter_test:
