--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,7 @@ dependencies:
   intl: ^0.19.0
   dropdown_button2: ^2.3.9
   flutter_slidable: ^1.2.0
+  url_launcher: ^6.1.14
 
 dev_dependencies:
   flutter_test:
