--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,7 @@ dependencies:
   shared_preferences: ^2.2.2
   flare_flutter: ^3.0.2
   fluttertoast: ^8.0.9
+  flutter_launcher_icons: ^0.13.1
   intl: ^0.19.0
   dropdown_button2: ^2.3.9
   flutter_slidable: ^1.2.0
@@ -112,3 +113,7 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
+flutter_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/images/appicon.png"
