--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,11 +62,12 @@ dependencies:
   flutter_slidable: ^1.2.0
   url_launcher: ^6.1.14
   flutter_svg: ^1.1.6
+  image_cropper: ^5.0.1
+
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
   mockito: ^5.4.2
 
   # The "flutter_lints" package below contains a set of recommended lints to
