--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,20 +1,13 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
-<uses-permission  android:name="android.permission.READ_PHONE_STATE"/>
-<uses-permission  android:name="android.permission.INTERNET"  />
-<uses-permission  android:name="android.permission.RECORD_AUDIO"  />
-<uses-permission  android:name="android.permission.CAMERA"  />
-<uses-permission  android:name="android.permission.MODIFY_AUDIO_SETTINGS"  />
-<uses-permission  android:name="android.permission.ACCESS_NETWORK_STATE"  />
-<!-- The Agora SDK requires Bluetooth permissions in case users are using Bluetooth devices.-->
-<uses-permission  android:name="android.permission.BLUETOOTH"  />
     <application
-        android:label="fitnessapp"
+        android:label="fitness_app"
         android:name="${applicationName}"
-        android:icon="@mipmap/launcher_icon">
+        android:icon="@mipmap/ic_launcher">
         <activity
             android:name=".MainActivity"
             android:exported="true"
             android:launchMode="singleTop"
+            android:taskAffinity=""
             android:theme="@style/LaunchTheme"
             android:configChanges="orientation|keyboardHidden|keyboard|screenSize|smallestScreenSize|locale|layoutDirection|fontScale|screenLayout|density|uiMode"
             android:hardwareAccelerated="true"
@@ -38,4 +31,15 @@
             android:name="flutterEmbedding"
             android:value="2" />
     </application>
+    <!-- Required to query activities that can process text, see:
+         https://developer.android.com/training/package-visibility and
+         https://developer.android.com/reference/android/content/Intent#ACTION_PROCESS_TEXT.
+
+         In particular, this is used by the Flutter engine in io.flutter.plugin.text.ProcessTextPlugin. -->
+    <queries>
+        <intent>
+            <action android:name="android.intent.action.PROCESS_TEXT"/>
+            <data android:mimeType="text/plain"/>
+        </intent>
+    </queries>
 </manifest>
