--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,11 +44,11 @@ dependencies:
   flutter_screenutil: ^5.9.0
   font_awesome_flutter: ^10.7.0
   image_picker: ^1.0.7
-  path_provider: ^2.0.9
-  agora_rtc_engine: ^6.3.0
-  agora_uikit: ^1.3.8
+  path_provider: ^2.1.5
+  # agora_rtc_engine: ^6.3.0
+  # agora_uikit: ^1.3.8
   uuid: ^4.2.2
-  share_plus: ^7.2.2
+  share_plus: ^12.0.0
   http: ^1.1.0
   permission_handler: ^11.0.1
   table_calendar: ^3.1.1
@@ -59,10 +59,10 @@ dependencies:
   flutter_launcher_icons: ^0.13.1
   intl: ^0.19.0
   dropdown_button2: ^2.3.9
-  flutter_slidable: ^1.2.0
-  url_launcher: ^6.1.14
+  flutter_slidable: ^4.0.1
+  url_launcher: ^6.3.2
   flutter_svg: ^1.1.6
-  image_cropper: ^5.0.1
+  image_cropper: ^9.1.0
 
 
 dev_dependencies:
