--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -44,11 +46,11 @@ dependencies:
   flutter_screenutil: ^5.9.0
   font_awesome_flutter: ^10.7.0
   image_picker: ^1.0.7
-  path_provider: ^2.0.9
-  agora_rtc_engine: ^6.3.0
-  agora_uikit: ^1.3.8
+  path_provider: ^2.1.5
+  # agora_rtc_engine: ^6.3.0
+  # agora_uikit: ^1.3.8
   uuid: ^4.2.2
-  share_plus: ^7.2.2
+  share_plus: ^12.0.0
   http: ^1.1.0
   permission_handler: ^11.0.1
   table_calendar: ^3.1.1
@@ -59,16 +61,18 @@ dependencies:
   flutter_launcher_icons: ^0.13.1
   intl: ^0.19.0
   dropdown_button2: ^2.3.9
-  flutter_slidable: ^1.2.0
-  url_launcher: ^6.1.14
+  flutter_slidable: ^4.0.1
+  url_launcher: ^6.3.2
   flutter_svg: ^1.1.6
-  image_cropper: ^5.0.1
+  image_cropper: ^9.1.0
 
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   mockito: ^5.4.2
+  build_runner: ^2.4.6
+  flutter_gen_runner: ^5.4.0
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -86,6 +90,7 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+  generate: true
 
   # To add assets to your application, add an assets section, like this:
   assets:
@@ -134,3 +139,7 @@ flutter_icons:
   android: "launcher_icon"
   ios: true
   image_path: "assets/images/appicon.png"
+
+flutter_gen:
+  output: lib/gen/
+  line_length: 120
