--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -65,6 +65,8 @@ dependencies:
   url_launcher: ^6.3.2
   flutter_svg: ^1.1.6
   image_cropper: ^9.1.0
+  flutter_chat_ui: ^2.9.0
+  flutter_chat_core: ^2.0.0
 
 
 dev_dependencies:
