feat(map picker): center on current user location and show my-location; add geolocator + platform permissions
- RoutePicker now requests permission and centers camera on current location once\n- Enables my-location blue dot and button\n- Add geolocator dependency\n- Android: add ACCESS_FINE/COARSE_LOCATION permissions\n- iOS: add location usage descriptions to Info.plist\n- Update generated plugin registrants

--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -47,5 +47,10 @@
 	<true/>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
+	<!-- Location permission descriptions for map centering -->
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>This app uses your location to center the map and help pick walking routes.</string>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>This app uses your location to center the map and help pick walking routes.</string>
 </dict>
 </plist>
