--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -69,6 +69,7 @@ dependencies:
   flutter_chat_core: ^2.0.0
   google_maps_flutter: ^2.7.0
   geocoding: ^2.1.1
+  geolocator: ^10.1.0
 
 
 dev_dependencies:
